--- a/landingpage.html
+++ b/landingpage.html
@@ -29,11 +29,11 @@
 
   <header class="header">
     <div class="container">
-      <div class="head-text">
+      <div class="head-text" style="font-size:2vw;">
         <h1>&nbsp;HELLO EVERYONE&nbsp;</h1>
       </div>
       <div class="head-img">
-        <img class="img1" src="img/head.jpg" alt="work" width="100%">
+        <img class="img1" src="img/head.jpg" alt="work" style="max-width:100%;height:auto";>
       </div>
     </div>
   </header>
@@ -60,10 +60,10 @@
 
       <div class="content1">
         <div class="con1-img">
-          <img class="picme" src="img/me.jpg" alt="ME" width="100%">
+          <img class="picme" src="img/me.jpg" alt="ME" style="max-width:100%;height:auto";>
         </div>
 
-        <div class="con1-text">
+        <div class="con1-text" style="font-size:2vw;">
           <h1>UTHUMPORN NAIKORN</h1>
           <p>FOOD PROCESS ENGINEER</p>
           <hr noshade="noshade" size="4" width="100%" align="left">
@@ -102,6 +102,10 @@
             </p>
           </div>
           <hr noshade="noshade" size="5" width="100%" align="left">
+          <div class="hobby">
+            <h2>HOBBY</h2>
+            <p>Sewing and Embroidery</p>
+          </div>
         </div>
       </div>
 
@@ -144,11 +148,15 @@
           <hr noshade="noshade" size="5" width="100%" align="left">
 
           <div class="skill">
-            <h2>HOBBY AND SKILL :</h2>
+            <h2>SKILL :</h2>
             <div class="skill-1">
               <ul>
-                <li>Embroidery Bag</li>
+                <li>xxxxxxxx</li>
                 <li>Photoshop</li>
+                <li>xxxxxxxxxx</li>
+                <li>xxxxxxxxxx</li>
+                <li>xxxxxxxxxx</li>
+                <li>xxxxxxxxxx</li>
               </ul>
             </div>
           </div>
